--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Calculator</title>
   </head>
   <body>
-    <form  action="/" method="post">
-      <input type="text" name="num1" placeholder="First number">
-      <input type="text" name="num2" placeholder="Second number">
-      <button type="submit" name="Submit">Calculate</button>
+    <form class="" action="/calculator" method="post">
+      <button type="submit" name="button">Calculator</button>
+    </form>
+    <br>
+    <form class="" action="/bmicalculator" method="post">
+      <button type="submit" name="button">BMI</button>
     </form>
   </body>
 </html>
